<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/field_margin_bottom"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/card_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_profile">

        <EditText
            android:id="@+id/et_pet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pet_name"
            android:textColor="@color/brown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_type"
            android:textSize="@dimen/text_size_default"
            android:textColor="@color/brown"
            android:layout_marginTop="@dimen/margin_label_small"/>

        <Spinner
            android:id="@+id/spinner_pet_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/et_pet_breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/breed"
            android:textColor="@color/brown" />

        <EditText
            android:id="@+id/et_pet_birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birth_date"
            android:inputType="date"
            android:textColor="@color/brown" />

        <EditText
            android:id="@+id/et_pet_chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/chip_number"
            android:textColor="@color/brown" />

        <ImageButton
            android:id="@+id/btn_remove_pet"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@android:drawable/ic_menu_delete"
            app:tint="@color/brown"
            android:contentDescription="@string/delete" />
    </LinearLayout>
</androidx.cardview.widget.CardView>