<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Reservation"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/brown"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Hotel:"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/spinner_hotels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/btn_select_dates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:text="@string/check_in_check_out_dates"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tv_selected_dates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_dates_selected"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/btn_select_pets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:text="@string/select_pets"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tv_selected_pets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_pets_selected"
        android:textColor="@color/brown"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/btn_confirm_booking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pet_gold"
        android:text="@string/confirm_reservation" />

</LinearLayout>