<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_name"
            android:textSize="26sp"
            android:textColor="@color/brown"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_reservation"
            android:textSize="18sp"
            android:textColor="@color/brown"
            android:textStyle="bold"
            android:layout_marginBottom="6dp" />

        <TextView
            android:id="@+id/tv_no_reservations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_upcoming_reservations"
            android:textSize="14sp"
            android:textColor="#757575"
            android:visibility="gone"
            android:layout_marginBottom="6dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_bookings"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scrollbars="vertical"
            android:fadeScrollbars="false"
            android:layout_marginBottom="8dp"
            android:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0"
            android:layout_marginVertical="20dp" />

        <TextView
            android:id="@+id/tv_past_reservations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/past_reservations"
            android:textColor="@color/pet_gold"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="2dp"
            android:layout_marginBottom="12dp" />

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/rv_past_bookings"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:nestedScrollingEnabled="false" />-->

    </LinearLayout>
</ScrollView>